<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:paddingBottom="15dp"
        android:clipToPadding="false"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.DetailsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:scaleType="centerCrop"
                tools:src="@drawable/tools_coffee_img"
                android:id="@+id/details_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_img_height"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toTopOf="parent" tools:ignore="ContentDescription"/>
        <View
                android:background="@drawable/details_img_fg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_img_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:id="@+id/view"/>

        <LinearLayout
                android:minHeight="50dp"
                android:padding="6dp"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintStart_toStartOf="@+id/verticalGuid"
                android:id="@+id/relativeLayout">

            <TextView
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:id="@+id/details_title"
                    android:textColor="#fff"
                    tools:text="Addictive Sweet Potato Burritos "
                    android:textAppearance="@style/Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                         />
            <Space
                    android:layout_gravity="bottom|end"
                    android:layout_width="40dp"
                    android:maxHeight="40dp"
                    android:layout_height="30dp"/>
        </LinearLayout>



        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.02"
                android:id="@+id/verticalGuid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:textStyle="bold"
                android:text="@string/rank"
                android:textAppearance="@style/Details.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/verticalGuid"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/view"
                android:id="@+id/textView"/>
        <TextView
                android:textStyle="bold"

                android:text="@string/ingredients"
                android:textAppearance="@style/Details.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/details_rating_bar" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:id="@+id/textView2"/>
        <RatingBar
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:id="@+id/details_rating_bar"
                tools:rating="4.5"
                android:max="5"
                android:isIndicator="true"
                android:layout_marginTop="8dp"
                android:numStars="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" tools:layout_editor_absoluteY="251dp"/>
        <com.google.android.material.card.MaterialCardView
                android:id="@+id/recipeRateParent"
                android:layout_width="50dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="?colorOnPrimary"
                app:cardCornerRadius="25dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintVertical_bias="0.447"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp" app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/view">
            <RelativeLayout
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <com.airbnb.lottie.LottieAnimationView
                        android:layout_marginEnd="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginTop="2dp"
                        android:id="@+id/recipeFavAnim_details"
                        android:layout_width="55dp"
                        android:scaleX="1.4"
                        android:scaleY="1.4"
                        android:layout_centerInParent="true"
                        app:lottie_rawRes="@raw/heart"
                        android:layout_height="55dp"/>
                <View
                        android:layout_centerInParent="true"
                        android:id="@+id/unFav_img_details"
                        android:layout_width="21dp"
                        android:layout_height="18dp"
                        android:background="@drawable/heart_img"
                />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="5dp"
                android:overScrollMode="never"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:id="@+id/recycler_ingredients"
                tools:listitem="@layout/item_details"
                tools:itemCount="7"
                android:minHeight="100dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutAnimation="@anim/layout_animation_fall_down"
                tools:layoutAnimation="?nullable"
                app:layout_constraintTop_toBottomOf="@+id/textView2"/>

        <ProgressBar
                tools:visibility="visible"
                android:visibility="gone"
                android:id="@+id/progress_ingredients"
                android:layout_width="50dp" android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="@+id/recycler_ingredients"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintVertical_bias="0.33999997"/>

        <TextView
                android:textStyle="bold"
                android:text="@string/preparations_amp_publisher"
                android:textAppearance="@style/Details.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/recycler_ingredients"
                app:layout_constraintStart_toStartOf="@+id/verticalGuid"/>

        <TextView
                android:textIsSelectable="true"
                android:textColorLink="@color/colorPrimaryDark"
                tools:text="www.google.com"
                android:autoLink="web"
                android:layout_gravity="center"
                android:id="@+id/publisher_link_text"
                android:textAppearance="@style/Details.normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/verticalGuid"
                android:layout_marginTop="6dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>